<resources>
    <string name="app_name">Greeting Application</string>
    <string name="greet">Greet</string>
    <string name="name_hint">Please enter your name</string>
    <string name="greet_message">Hello %1$s!</string>
    <string name="show_details_button">Show details</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="show_dialog">Show dialog</string>
    <string name="dialog_title">Delete some data</string>
    <string name="dialog_message">Are you sure?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_neutral">Cancel</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
</resources>