<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GreetingActivity">

    <EditText
        android:id="@+id/editName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"

        android:layout_marginEnd="16dp"

        android:layout_marginRight="16dp"
        android:ems="10"

        android:hint="@string/name_hint"
        android:inputType="textPersonName"

        app:layout_constraintEnd_toStartOf="@+id/buttonGreet"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonGreet"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="greet"

        android:text="@string/greet"

        app:layout_constraintBaseline_toBaselineOf="@+id/editName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editName" />

    <TextView
        android:id="@+id/labelGreet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:textColor="#4CAF50"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editName"
        tools:text="Hello World" />

    <Button
        android:id="@+id/showDetailsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:onClick="showDetails"
        android:text="@string/show_details_button"
        app:layout_constraintTop_toBottomOf="@+id/labelGreet" />

    <Button
        android:id="@+id/showDialogButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/showDetailsButton"
        android:text="@string/show_dialog"
        android:onClick="showDialog"
        />

    <Button
        android:id="@+id/showDialogListButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/showDialogButton"
        android:text="List"
        android:onClick="showDialogList"
        />
    <Button
        android:id="@+id/showSingleChoiceButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/showDialogListButton"
        android:text="Single choice"
        android:onClick="showDialogSingleChoice"
        />
    <Button
        android:id="@+id/showMultiChoiceButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/showSingleChoiceButton"
        android:text="Multi choice"
        android:onClick="showDialogMultiChoice"
        />
    <Button
        android:id="@+id/showDialogCustomButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/showMultiChoiceButton"
        android:text="Custom"
        android:onClick="showDialogCustom"
        />

</androidx.constraintlayout.widget.ConstraintLayout>